<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 QuantumDroid Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qdengine_title">

    <PreferenceCategory
	    android:key="button_settings"
	    android:title="@string/button_setting_label" >

    <PreferenceScreen
        android:key="button_settings"
        android:fragment="com.qd.engine.input.ButtonSettings"
        android:layout="@layout/preference_buttons"
        android:title="@string/buttons_pref_title" />

</PreferenceCategory>

    <PreferenceCategory
	    android:key="statusbar_settings"
	    android:title="@string/statusbar_setting_label" >

         <PreferenceScreen
            android:key="quick_settings"
            android:fragment="com.qd.engine.statusbar.QuickSettings"
            android:layout="@layout/preference_quick_settings"
            android:title="@string/quick_settings_title" />

</PreferenceCategory>

     <PreferenceCategory
             android:key="lights"
             android:title="@string/lights_label">
 
         <!-- Battery light -->
         <PreferenceScreen
                 android:key="battery_light"
                 android:title="@string/battery_light_title"
                 android:fragment="com.qd.engine.notificationlight.BatteryLightSettings" />
 
         <!-- Notification light -->
         <PreferenceScreen
                 android:key="notification_light"
                 android:title="@string/notification_light_title"
                 android:fragment="com.qd.engine.notificationlight.NotificationLightSettings" />
 
</PreferenceCategory>

    <com.qd.engine.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="false" />

</PreferenceScreen>

